--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/app/todolist/store.js"
   ],
   "exclude": [
     "node_modules"
